Add license. Start vision notebook

--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "30f6307d",
+   "metadata": {},
+   "source": [
+    "# Linear Regression with Polynomial Features\n",
+    "\n",
+    "This notebook demonstrates how to perform linear regression using polynomial features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "0b1f22d8",
@@ -357,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "70f50795",
    "metadata": {},
    "outputs": [
